# jinchanchan-s17-helper

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py  schemas.py
backend/jinchanchan_s17_helper_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/types/: index.ts
