[project]
name = "jinchanchan-s17-helper-backend"
version = "0.1.0"
description = "FastAPI backend for Jinchanchan S17 recommendation helper"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

